--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -26,7 +26,18 @@
       <li class="mdl-menu__item">Yet Another Action</li>
     </ul>-->
   </nav>
+
   <section class="content">
     <router-outlet></router-outlet>
   </section>
+
+  <footer class="footer">
+    <a href="http://www.github.com/PerttuSavolainen" target="_blank">
+      <img src="assets/GitHub-Mark-64px.png" alt="Github">
+    </a>
+    <a href="https://www.facebook.com/perttu.savolainen" target="_blank">
+      <img src="assets/FB-f-Logo__blue_50.png" alt="Facebook">
+    </a>
+  </footer>
+
 </div>
