--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -108,25 +108,14 @@
   max-width: 1600px;
   margin: 0 auto;
   padding: 1rem;
+  position: relative;
 }
 
 .scroll-down-btn {
   position: absolute;
-  bottom: 0;
-  transform: translate(-50%, 50%);
-  /*animation: btnAnim 5s ease-in-out infinite;*/
-}
-
-@keyframes btnAnim {
-  0% {
-    transform: translate(-50%, 50%);
-  }
-  90% {
-    transform: translate(-50%, 45%);
-  }
-  95% {
-    transform: translate(-50%, 55%);
-  }
+  top: -3rem;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .footer {
@@ -154,4 +143,17 @@
   .front .logo-wrapper h1 {
     font-size: 7rem;
   }
+}
+
+.front {
+  position: relative;
+  overflow: hidden;
+}
+
+#front-icons {
+  position: absolute;
+  top: 0; bottom: 0;
+  left: 0; right: 0;
+  overflow: hidden;
+  box-shadow: inset 0 -5rem 20rem rgba(0,0,0,0.1);
 }
