--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,13 @@
 <main id="site">
   <section class="front">
 
-    <div id="front-icons"></div>
+    <div id="svgWrapper" class="svgWrapper"></div>
+
     <div class="logo-wrapper">
       <object class="logo" type="image/svg+xml" data="assets/logo.svg"></object>
       <h1><span>P</span><span>o</span><span>r</span><span>t</span><span>f</span><span>o</span><span>l</span><span>i</span><span>o</span><span class="name">Perttu Savolainen</span>    </h1>
     </div>
+
   </section>
 
   <nav id="navi" class="navi content">
