--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -22,8 +22,8 @@
   height: 90vh;
   width: 100%;
   position: relative;
-   background: #ea6161;
-   color: #fff;
+   background: #ffd9a8;
+   color: #616161;
    text-align: center;
    margin-bottom: 3rem;
  }
@@ -49,14 +49,14 @@
  .front .logo-wrapper h1:before {
   content: "<";
   position: absolute;
-  bottom: 0.75rem;
-  color: rgba(255, 255, 255, 0.25);
+  bottom: 1.25rem;
+  color: #616161;;
   right: 100%; }
  .front .logo-wrapper h1:after {
   content: ">";
   position: absolute;
-  bottom: 0.75rem;
-  color: rgba(255, 255, 255, 0.25);
+  bottom: 1.25rem;
+  color: #616161;
   left: 100%; }
  .front .logo-wrapper h1 .name {
   display: block;
@@ -156,4 +156,16 @@
   left: 0; right: 0;
   overflow: hidden;
   box-shadow: inset 0 -5rem 20rem rgba(0,0,0,0.1);
+  background: url('../assets/lightbulb.jpg');
+  background: white;
+}
+
+.lightbulb {
+  width: 100%;
+  max-width: 20rem;
+}
+
+.svgWrapper {
+  height: 100%;
+  background: #ffd9a8;
 }
