--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,7 +16,7 @@
       <i class="material-icons">expand_more</i>
     </button>
 
-    <a routerLink="" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }" class="separator-right">Who?</a>
+    <a routerLink="" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">Who?</a>
     <a routerLink="/projects" routerLinkActive="active">Projects</a>
     <a routerLink="/webpages" routerLinkActive="active">Web pages</a>
     <a routerLink="/logos" routerLinkActive="active">Logos</a>
