--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -81,9 +81,17 @@
 
 .navi a {
   display: inline-block;
-  padding: 1rem;
+  padding: 0.5rem 1rem;
   color: #fff;
   text-decoration: none;
+}
+
+@media(min-width: 768px) {
+
+  .navi a {
+    padding: 1rem;
+  }
+
 }
 
 .navi a.active {
