--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -30,7 +30,7 @@
 
   <footer class="footer">
     <a href="https://www.linkedin.com/in/perttu-savolainen-06082a137" target="_blank">
-      <img src="assets/LinkedIn_logo.PNG" alt="LinkedIn">
+      <img src="assets/LinkedIn_logo.png" alt="LinkedIn">
     </a>
     <a href="http://www.github.com/PerttuSavolainen" target="_blank">
       <img src="assets/GitHub-Mark-64px.png" alt="Github">
