--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -29,15 +29,9 @@
   </section>
 
   <footer class="footer">
-    <a href="https://www.linkedin.com/in/perttu-savolainen-06082a137" target="_blank">
-      <img src="assets/LinkedIn_logo.png" alt="LinkedIn">
-    </a>
-    <a href="http://www.github.com/PerttuSavolainen" target="_blank">
-      <img src="assets/GitHub-Mark-64px.png" alt="Github">
-    </a>
-    <a href="https://www.facebook.com/perttu.savolainen" target="_blank">
-      <img src="assets/FB-f-Logo__blue_50.png" alt="Facebook">
-    </a>
+    <a href="https://www.linkedin.com/in/perttu-savolainen-06082a137" target="_blank"><img src="assets/LinkedIn_logo.png" alt="LinkedIn"></a>
+    <a href="http://www.github.com/PerttuSavolainen" target="_blank"><img src="assets/GitHub-Mark-64px.png" alt="Github"></a>
+    <a href="https://www.facebook.com/perttu.savolainen" target="_blank"><img src="assets/FB-f-Logo__blue_50.png" alt="Facebook"></a>
   </footer>
 
 </main>
