--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,6 +1,6 @@
 <div class="mdl-grid">
   <div class="mdl-cell mdl-card mdl-shadow--4dp" *ngFor="let item of projectItems">
-    <div class="mdl-card__media">
+    <div class="mdl-card__media" style="position: relative">
       <img [src]="item.image" alt="" style="max-width: 100%">
     </div>
     <div class="mdl-card__title">
