--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,11 +16,11 @@
       <i class="material-icons">expand_more</i>
     </button>
 
-    <a routerLink="" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">Who?</a>
-    <a routerLink="/projects" routerLinkActive="active">Projects</a>
-    <a routerLink="/webpages" routerLinkActive="active">Web pages</a>
-    <a routerLink="/logos" routerLinkActive="active">Logos</a>
-    <a routerLink="/assets" routerLinkActive="active">Assets</a>
+    <a routerLink="" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">Kuka?</a>
+    <a routerLink="/projektit" routerLinkActive="active">Projektit</a>
+    <a routerLink="/websivut" routerLinkActive="active">Websivut</a>
+    <a routerLink="/logot" routerLinkActive="active">Logot</a>
+    <a routerLink="/sekalaista" routerLinkActive="active">Sekalaista</a>
 
   </nav>
 
@@ -28,10 +28,12 @@
     <router-outlet></router-outlet>
   </section>
 
-  <footer class="footer">
-    <a href="https://www.linkedin.com/in/perttu-savolainen-06082a137" target="_blank"><img src="assets/LinkedIn_logo.png" alt="LinkedIn"></a>
-    <a href="http://www.github.com/PerttuSavolainen" target="_blank"><img src="assets/GitHub-Mark-64px.png" alt="Github"></a>
-    <a href="https://www.facebook.com/perttu.savolainen" target="_blank"><img src="assets/FB-f-Logo__blue_50.png" alt="Facebook"></a>
-  </footer>
+
 
 </main>
+
+<footer class="footer">
+  <a href="https://www.linkedin.com/in/perttu-savolainen-06082a137" target="_blank"><img src="assets/LinkedIn_logo.png" alt="LinkedIn"></a>
+  <a href="http://www.github.com/PerttuSavolainen" target="_blank"><img src="assets/GitHub-Mark-64px.png" alt="Github"></a>
+  <a href="https://www.facebook.com/perttu.savolainen" target="_blank"><img src="assets/FB-f-Logo__blue_50.png" alt="Facebook"></a>
+</footer>
